--- a/Develop/index.html
+++ b/Develop/index.html
@@ -1,49 +1,60 @@
 <!DOCTYPE html>
 <html lang="en-us">
 
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="stylesheet" href="./assets/css/style.css">
-    <title>Horiseon</title>
-  </head>
+<head>
+  <meta charset="UTF-8" />
+  <link rel="stylesheet" href="./assets/css/style.css">
+  <title>Horiseon: Marketing Agency</title>
+</head>
 
-  <body>
-    <header>
-      <h1>Hori<span class="seo">seo</span>n</h1>
-      <nav>
-        <ul>
-          <li><a href="#search-engine-optimization">Search Engine Optimization</a></li>
-          <li><a href="#online-reputation-management">Online Reputation Management</a></li>
-          <li><a href="#social-media-marketing">Social Media Marketing</a></li>
-        </ul>
-      </nav>
-    </header>
+<body>
+  <header>
+    <h1>Hori<span class="seo">seo</span>n</h1>
+    <nav>
+      <ul>
+        <li><a href="#search-engine-optimization">Search Engine Optimization</a></li>
+        <li><a href="#online-reputation-management">Online Reputation Management</a></li>
+        <li><a href="#social-media-marketing">Social Media Marketing</a></li>
+      </ul>
+    </nav>
+  </header>
 
-  <div class="hero"></div>
-  <div class="content">
-        <div class="search-engine-optimization">
-            <img src="./assets/images/search-engine-optimization.jpg" class="float-left" />
-            <h2>Search Engine Optimization</h2>
-            <p>
-                The dominance of mobile internet use means that users are searching for the right business as they travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase your visibility and find the right customers for your business.
-            </p>
-        </div>
-        <div id="online-reputation-management" class="online-reputation-management">
-            <img src="./assets/images/online-reputation-management.jpg" class="float-right" />
-            <h2>Online Reputation Management</h2>
-            <p>
-                The web is full of opinions, and some of these can be negative. Social media allows anyone with an internet connection to say whatever they want about your business. Online Reputation Management gives you the control over what potential customers see when they search for your business.
-            </p>
-        </div>
-        <div id="social-media-marketing" class="social-media-marketing">
-            <img src="./assets/images/social-media-marketing.jpg" class="float-left" />
+  <main>
+    <section class="hero"></section>
+    <div class="content">
+    
+    <section>
+    <div class="search-engine-optimization">
+      <img class="float-left" src="./assets/images/search-engine-optimization.jpg" alt="seo stock image and description"/>
+    <h2>Search Engine Optimization</h2>
+      <p>
+        The dominance of mobile internet use means that users are searching for the right business as they travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase your visibility and find the right customers for your business.
+      </p>
+    </div>
+    </section>
+    
+    <section>
+    <div class="online-reputation-management">
+      <img class="float-right" src="./assets/images/online-reputation-management.jpg" alt="online reputation management stock image and description"/>
+      <h2>Online Reputation Management</h2>
+      <p>
+        The web is full of opinions, and some of these can be negative. Social media allows anyone with an internet connection to say whatever they want about your business. Online Reputation Management gives you the control over what potential customers see when they search for your business.
+      </p>
+    </div>
+    </section>
+
+    <section>
+        <div class="social-media-marketing">
+            <img class="float-left" src="./assets/images/social-media-marketing.jpg" alt="social media marketing stock image and description"/>
             <h2>Social Media Marketing</h2>
             <p>
                 Social media continues to have a sizable influence on buying habits. Social media marketing helps you determine which platforms are suited to your brand, using analytics to find the right markets and increase your lead generation.
             </p>
         </div>
-    </div>
-    <div class="benefits">
+     </div>
+    </section>
+
+     <div class="benefits">
         <div class="benefit-lead">
             <h3>Lead Generation</h3>
             <img src="./assets/images/lead-generation.png" />
@@ -66,6 +77,7 @@
             </p>
         </div>
     </div>
+  </main>
     <div class="footer">
         <h2>Made with ❤️️ by Horiseon</h2>
         <p>
