--- a/Develop/index.html
+++ b/Develop/index.html
@@ -72,14 +72,15 @@
       <p>As the search ranking for your business increases, your advertising costs decrease, and you no longer need to advertise your page.
       </p>
     </div>
+    
     </div>
     </main>
-    <div class="footer">
+    
+    <footer>
         <h2>Made with ❤️️ by Horiseon</h2>
-        <p>
-            &copy; 2019 Horiseon Social Solution Services, Inc.
+        <p>&copy; 2019 Horiseon Social Solution Services, Inc.
         </p>
-    </div>
+    </footer>
 
   </body>
 
